# ndm-checkindesk

./: .gitignore  Dockerfile  Makefile  README.md  config.default.inc.php  config.yaml  docker-compose.yml  index.php  pyproject.toml  requirements.txt
app/: main.py  state.py
app/templates/: index.html
controllers/: ticket.php  visitor.php
examples/: docker-compose_local.yml
models/: Ndm.php
src/: Dockerfile  docker-entrypoint.sh
src/conf/: php.ini
src/www/: bootstrap.inc.php  config.inc.php  index.php
src/www/css/: style.css
src/www/models/: Ndm.php
tests/: test_api.py  test_state.py
