[project]
name = "ndm-checkindesk"
version = "0.1.0"
description = "NdM CheckInDesk"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
  "jinja2==3.1.6",
  "python-multipart==0.0.22",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "httpx",
  "black",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
